plugins {
    id "com.gradleup.shadow" version "9.4.1"
    id "java"
}

group "net.minecraft"
version "1.12.2"

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

repositories {
    mavenCentral()
    maven {
        url = "https://github.com/SkidJava/Skid-central/raw/repository/"
    }
}

dependencies {
    implementation "oshi-project:oshi-core:1.1"
    implementation "net.java.dev.jna:jna:5.18.1"
    implementation "net.java.dev.jna:platform:3.5.2"
    implementation "com.ibm.icu:icu4j:78.3"
    implementation "net.sf.jopt-simple:jopt-simple:5.0.4"
    implementation "com.paulscode:codecjorbis:20101023"
    implementation "com.paulscode:codecwav:20101023"
    implementation "com.paulscode:libraryjavasound:20101123"
    implementation "com.paulscode:librarylwjglopenal:20100824"
    implementation "com.paulscode:soundsystem:20120107"
    implementation "io.netty:netty-all:4.2.10.Final"
    implementation "com.google.guava:guava:33.6.0-jre"
    implementation "org.apache.commons:commons-lang3:3.20.0"
    implementation "commons-io:commons-io:2.22.0"
    implementation "commons-codec:commons-codec:1.22.0"
    implementation "net.java.jinput:jinput:2.0.10"
    implementation "net.java.jutils:jutils:1.0.0"
    implementation "com.google.code.gson:gson:2.14.0"
    implementation "org.apache.commons:commons-compress:1.28.0"
    implementation "org.apache.httpcomponents:httpclient:4.5.14"
    implementation "commons-logging:commons-logging:1.3.6"
    implementation "org.apache.httpcomponents:httpcore:4.4.16"
    implementation "it.unimi.dsi:fastutil:8.5.18"
    implementation "org.apache.logging.log4j:log4j-api:2.25.4"
    implementation "org.apache.logging.log4j:log4j-core:2.25.4"
    implementation "org.lwjgl:lwjgl:2.9.4-nightly-20150209"
    implementation "org.lwjgl:lwjgl_util:2.9.4-nightly-20150209"
    implementation "com.mojang:text2speech:1.10.3"
    implementation "com.google.code.findbugs:jsr305:3.0.2"
    implementation "com.mojang:realms:1.10.18"
    implementation "com.mojang:authlib:1.5.25"
}
